<<<<<<< HEAD
[gd_scene load_steps=17 format=2]
=======
[gd_scene load_steps=14 format=2]
>>>>>>> c7d1a6e185c4b847b0b1dc688f3991d733bad9f4

[ext_resource path="res://Scenes/Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/doorB.tscn" type="PackedScene" id=4]
[ext_resource path="res://Models/GLTF format/door_typeB.glb" type="PackedScene" id=5]
[ext_resource path="res://Scenes/windowSmall_typeA.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/tree_shrub.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/grass.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/tree_large.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/roadDirt_tile.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/wallA_corner.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/StartUpManager.gd" type="Script" id=14]
[ext_resource path="res://Scenes/PlayerDash.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/PlayerGrab.tscn" type="PackedScene" id=16]

[node name="Main" type="Spatial"]

[node name="StartUpManager" type="Spatial" parent="."]
script = ExtResource( 14 )

[node name="PlayerSpawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -8 )

[node name="windowSmall_typeA" parent="." instance=ExtResource( 6 )]
transform = Transform( -0.996548, 0, 0.083017, 0, 1, 0, -0.083017, 0, -0.996548, -1.89861, 0.282843, 7.10532 )

[node name="Floor" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00222778, 0.0054391, 0.0021528 )
collision_mask = 2

[node name="Door" parent="." groups=["Interactibles"] instance=ExtResource( 3 )]

[node name="door_typeB" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.8815, 1.29721, 5.81742 )

[node name="door_typeB2" parent="." groups=["Interactibles"] instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -4.1138, 0.0477976, -3.6908 )

[node name="tree_shrub" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.58449, 0.0479642, 1.50106 )

[node name="grass" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.58449, 0.0826821, 1.50106 )

[node name="tree_large" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.64359, 0.107622, 3.73596 )

[node name="roadDirt_tile" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0883662, 6.88642 )

[node name="wallA_corner" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.13926, 0, 0.990256, 0, 1, 0, -0.990256, 0, 0.13926, -2.12684, 0, 7.08136 )

[node name="GUI" parent="." instance=ExtResource( 12 )]

[node name="Enemy" parent="." groups=["Enemy"] instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.94432, 1.10776, 0 )

[node name="Enemy3" parent="." groups=["Enemy"] instance=ExtResource( 13 )]
transform = Transform( -0.901878, 0, -0.431991, 0, 1, 0, 0.431991, 0, -0.901878, 4.13091, 1.10776, 0 )

[node name="Enemy2" parent="." groups=["Enemy"] instance=ExtResource( 13 )]
transform = Transform( 0.422197, -0.0190333, -0.906304, -0.00028529, 0.999777, -0.0211292, 0.906504, 0.00917924, 0.422097, 0, 1.10776, 2.66712 )

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 2 )]
visible = false

[node name="PlayerGrab" parent="." groups=["Player"] instance=ExtResource( 16 )]
visible = false

[node name="PlayerDash" parent="." groups=["Player"] instance=ExtResource( 15 )]
visible = false
